--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'DC'
 - !lcsh 'Joan, of Arc, Saint, 1412-1431'
+- GITenberg
 title: Joan of Arc, the Warrior Maid
 url: http://www.gutenberg.org/ebooks/34474
